# rush-hour-solver

./: .gitignore  BFS.py  DFS.py  Makefile  README.md  Visualisation.py  aStarSearch.py  astar.py  beam.py  beamSearch.py  bfsearch.py  board1.txt  boardUtils.py  breadth.py  breadthFirstSearch.py  depthFirstSearch.py  dfsearch.py  id.py  iterativeDeepening.py  pyproject.toml  randomDepthFirstSearch.py  rdfsearch.py  rhutils.py  rushutils.py  rushutils_uninformed.py  solver.py  standalone_vis.py  visualisation.py
algorithm/: algorithm.py
boards/: 6_90.csv  6_90.txt  6_93.csv  6_93.txt  9cars.txt  board1.csv  board1.txt  board2.csv  board2.txt  board3.csv  board3.txt  board4.csv  board4.txt  board5.csv  board5.txt  board6.csv  board6.txt  board7.csv  board7.txt  hardest.txt  test.txt
model/: board.py  node.py
src/: solver.py
src/algorithm/: __init__.py  algorithm.py
src/model/: __init__.py  board.py  move.py  node.py  vehicle.py
tests/: test_board.py  test_node.py
