[tool.poetry]
name = "teambudapest"
version = "0.1.0"
description = "Solving Rush Hour With Algorithms"
authors = ["Marvin Straathof <marvinstraathof@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
