[tool.poetry]
name = "rush_hour"
version = "0.1.0"
description = ""
authors = ["Marvin Straathof"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.289"
black = "^24.3.0"
pytest = "^7.4.2"
deptry = "^0.12.0"
mypy = "^1.5.1"
pytest-cov = "^4.1.0"

[tool.ruff]
line-length=88
select=[
    "B", # bugbear
    "E", # pycodestyle
    "I", # isort
    "RUF", # ruff
    "S", #bandit
    "W", # pycodestyle 
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
